welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:17: error: illegal start of simple expression
if(porteBiscuit());
                  ^